--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-PROXY_CONFIG_UDP_PORT=4545
-PROXY_CONFIG_TCP_PORT=4545
-PROXY_CONFIG_METHOD=
-PROXY_CONFIG_TCP_MAX_CONN_POOL=50000
-PROXY_CONFIG_CACHE_TTL=60
-PROXY_RESOLVER_READ_TO=3000
-DNS_PROVIDER_HOST=1.1.1.1
+export DNSPROXY_PORT=4545
+export DNSPROXY_TCPMAXCONNPOOL=50000
+export DNSPROXY_CACHETTL=60
+export DNSPROXY_RESOLVER_READ_TO=3000
+export DNSPROXY_PROVIDERHOST=185.222.222.222
+export DNSPROXY_ROOTCAPATH="./rootca.key"
