--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 export DNSPROXY_PORT=4545
 export DNSPROXY_TCPMAXCONNPOOL=50000
 export DNSPROXY_CACHETTL=60
-export DNSPROXY_RESOLVER_READ_TO=3000
-export DNSPROXY_PROVIDERHOST=185.222.222.222
+export DNSPROXY_RESOLVERTIMEOUT=3000
+#export DNSPROXY_PROVIDERHOST=185.222.222.222
+export DNSPROXY_PROVIDERPORT=853
+export DNSPROXY_PROVIDERHOST=1.1.1.1
 export DNSPROXY_ROOTCAPATH="./rootca.key"
