--- a/env.env
+++ b/env.env
@@ -6,3 +6,4 @@ export DNSPROXY_PORT=5353
 export DNSPROXY_TCPMAXCONNPOOL=100
 export DNSPROXY_CACHETTL=60
 export DNSPROXY_RESOLVERTIMEOUT=3000
+export DNSPROXY_CACHEENABLED=false
