--- a/env.env
+++ b/env.env
@@ -1,6 +1,6 @@
-#export DNSPROXY_PROVIDERHOST=185.222.222.222
+export DNSPROXY_PROVIDERHOST=185.222.222.222
 #export DNSPROXY_PROVIDERHOST=8.8.8.8
-export DNSPROXY_PROVIDERPORT=853
+#export DNSPROXY_PROVIDERPORT=853
 export DNSPROXY_PROVIDERHOST=1.1.1.1
 export DNSPROXY_PORT=5353
 export DNSPROXY_TCPMAXCONNPOOL=100
