--- a/env.env
+++ b/env.env
@@ -1,9 +1,10 @@
-export DNSPROXY_PROVIDERHOST=185.222.222.222
-#export DNSPROXY_PROVIDERHOST=8.8.8.8
-#export DNSPROXY_PROVIDERPORT=853
-export DNSPROXY_PROVIDERHOST=1.1.1.1
-export DNSPROXY_PORT=5353
-export DNSPROXY_TCPMAXCONNPOOL=100
-export DNSPROXY_CACHETTL=60
-export DNSPROXY_RESOLVERTIMEOUT=3000
-export DNSPROXY_CACHEENABLED=false
+#export PRONSY_PROVIDERHOST=185.222.222.222
+#export PRONSY_PROVIDERHOST=8.8.8.8
+export PRONSY_PROVIDERPORT=853
+export PRONSY_PROVIDERHOST=1.1.1.1
+export PRONSY_PORT=5354
+export PRONSY_TCPMAXCONNPOOL=100
+export PRONSY_CACHETTL=60
+export PRONSY_RESOLVERTIMEOUT=3000
+export PRONSY_CACHEENABLED=false
+export PRONSY_UDPMAXQUEUESIZE=1000
