--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,18 +6,19 @@ services:
     restart: always
     environment:
         # time in miliseconds
-      DNSPROXY_PORT: 5353
-      DNSPROXY_CACHEENABLED: true
-      DNSPROXY_CACHETTL: 120
-      DNSPROXY_TCPMAXCONNPOOL: 100
-      DNSPROXY_RESOLVERTIMEOUT: 3000
+      PRONSY_CACHEENABLED: true
+      PRONSY_CACHETTL: 120
+      PRONSY_RESOLVERTIMEOUT: 3000
+      PRONSY_TCPMAXCONNPOOL: 100
+      PRONSY_UDPMAXQUEUESIZE: 1000
         # google
-        #DNSPROXY_PROVIDERHOST: 8.8.8.8
+     #PRONSY_PROVIDERHOST: 8.8.8.8
         # dns.sb
-        #DNSPROXY_PROVIDERHOST: 185.222.222.222
+     #PRONSY_PROVIDERHOST: 185.222.222.222
         # CloudFlare
-      DNSPROXY_PROVIDERHOST: 1.1.1.1
-      DNSPROXY_PROVIDERPORT: 853
+      PRONSY_PROVIDERHOST: 1.1.1.1
+      PRONSY_PROVIDERPORT: 853
+      PRONSY_PORT: 5353
     ports:
       - "5353:5353/tcp"
       - "5353:5353/udp"
